--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node app.js"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
   "dependencies": {
     "argparse": "^2.0.1",
     "axios": "^0.21.1",
-    "js-yaml": "^4.0.0"
+    "js-yaml": "^4.0.0",
+    "json-format": "^1.0.1"
   }
 }
